add softmedia bookmarks

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -12,6 +12,17 @@
   <h1><%= @page.name %></h1>
   <%= @page.body %>
 </div>
+<!-- AddThis Button BEGIN -->
+<div class="addthis_toolbox addthis_default_style" id="softmedia">
+	<a href="http://www.addthis.com/bookmark.php?v=250&amp;username=xa-4b8d258405f38cf9" class="addthis_button_compact">Share</a>
+	<span class="addthis_separator">|</span>
+	<a class="addthis_button_facebook"></a>
+	<a class="addthis_button_myspace"></a>
+	<a class="addthis_button_google"></a>
+	<a class="addthis_button_twitter"></a>
+</div>
+<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#username=xa-4b8d258405f38cf9"></script>
+<!-- AddThis Button END -->
 <%= link_to image_tag("bt/get_started.png", :id => "get_started_home", :alt => "Get started on your provisional patent application", :title => "Get started on your provisional patent application", :size => "200x281"), page_path("get-started") %>
 <ul id="hot_boxes">
   <li>
