--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,17 @@
         <li class="first"><%= link_to "contact", page_path("contact") %></li>
         <li><%= link_to "sitemap", page_path("sitemap") %></li>
       </ul>
+	<!-- AddThis Button BEGIN -->
+	<div class="addthis_toolbox addthis_default_style" id="softmedia">
+		<a href="http://www.addthis.com/bookmark.php?v=250&amp;username=xa-4b8d258405f38cf9" class="addthis_button_compact">Share</a>
+		<span class="addthis_separator">|</span>
+		<a class="addthis_button_facebook"></a>
+		<a class="addthis_button_myspace"></a>
+		<a class="addthis_button_google"></a>
+		<a class="addthis_button_twitter"></a>
+	</div>
+	<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#username=xa-4b8d258405f38cf9"></script>
+	<!-- AddThis Button END -->
       <% [:error, :notice].each do |message| %>
     		<% content_tag :div, :class => message do %>
     			<%= flash[message] %>
