--- a/app/views/pages/get_started.html.erb
+++ b/app/views/pages/get_started.html.erb
@@ -2,6 +2,7 @@
 <div class="content_cms">
 	<%= @page.body %>
 </div>
+<p style="clear:both;">&nbsp;</p>
 <div id="hot_links">
   <%= link_to image_tag("bt/patent_search.png", :class => "first", :alt => "Patent Search", :title => "Patent Search", :size => "344x238"), page_path("patent-search") %>
   <%= link_to image_tag("bt/patent_application.png", :alt => "Patent Application", :title => "Patent Application", :size => "397x238"), go_to_current_order_state %>
