--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,8 +25,8 @@
     <div id="main">
       <%= link_to image_tag("patent_lock.png", :id => "logo", :alt => "Law Office of Michael Cohen - Patent Lock", :title => "Law Office of Michael Cohen - Patent Lock", :size => "289x83"), root_path %>
       <ul id="help_menu">
-        <li class="first"><%= link_to "contact", page_path("contact") %></li>
-        <li><%= link_to "sitemap", page_path("sitemap") %></li>
+        <li class="first"><%= link_to "sitemap", page_path("sitemap") %></li>
+        <li><%= link_to "contact", page_path("contact") %></li>
       </ul>
 	<!-- AddThis Button BEGIN -->
 	<div class="addthis_toolbox addthis_default_style" id="softmedia">
