--- a/app/views/pages/trademark_application.html.erb
+++ b/app/views/pages/trademark_application.html.erb
@@ -161,4 +161,4 @@
   <% end %>
 <% end %>
 </div>
-<%= javascript "plugins/metadata", "plugins/validate" %>
+<%= javascript "plugins/metadata", "plugins/validate", "pages/trademark_application" %>
