--- a/app/views/questionnaire/step4.html.erb
+++ b/app/views/questionnaire/step4.html.erb
@@ -6,7 +6,7 @@
   <%= error_messages_for @object.class.to_s.underscore.to_sym %>
   <% form_tag("step-4", :url => questionnaire_step4_path, :class => "validate", :method => :post ) do %>
     <%= hidden_field :order, :order_id, :value => @order.id %>
-	<%= hidden_field :order, :save_and_exit, :value => "" %>
+	<%= hidden_field :order, :save_and_exit, :value => "no" %>
 	
 	<%= label_tag "main_label", "<strong>5.</strong> Functionality and Elements of the Inventions" %>
 	<div id="field_set">
@@ -20,7 +20,7 @@
 	
 	<div id="field_set">
 	  <%= label :answer8, :body, "<strong>B.</strong> #{@question8.name} <small>#{@question8.info}</small>" %>
-	  <%= text_area :answer8, :body, :class => "required" %>
+	  <%= text_area :answer8, :body %>
 	</div>
 	<%= image_tag "bt/info_tab.jpg", :alt => "More Information", :class => "more_info" %>
 	<div class="info_text">
@@ -29,7 +29,7 @@
 	
 	<div id="field_set">
 	  <%= label :answer9, :body, "<strong>C.</strong> #{@question9.name} <small>#{@question9.info}</small>" %>
-	  <%= text_area :answer9, :body, :class => "required" %>
+	  <%= text_area :answer9, :body %>
 	</div>
 	<%= image_tag "bt/info_tab.jpg", :alt => "More Information", :class => "more_info" %>
 	<div class="info_text">
