--- a/app/views/questionnaire/step6.html.erb
+++ b/app/views/questionnaire/step6.html.erb
@@ -6,7 +6,7 @@
   <%= error_messages_for @object.class.to_s.underscore.to_sym %>
   <% form_tag("step-6", :url => questionnaire_step6_path, :class => "validate", :method => :post ) do %>
     <%= hidden_field :order, :order_id, :value => @order.id %>
-	<%= hidden_field :order, :save_and_exit, :value => "" %>
+	<%= hidden_field :order, :save_and_exit, :value => "no" %>
 	
 	<%= label_tag "main_label", "<strong>7. Use of the Invention</strong>" %>
 	<div id="field_set">
