--- a/app/views/questionnaire/step7.html.erb
+++ b/app/views/questionnaire/step7.html.erb
@@ -6,12 +6,12 @@
   <%= error_messages_for @object.class.to_s.underscore.to_sym %>
   <% form_tag("step-7", :url => questionnaire_step7_path, :class => "validate", :method => :post ) do %>
     <%= hidden_field :order, :order_id, :value => @order.id %>
-	<%= hidden_field :order, :save_and_exit, :value => "" %>
+	<%= hidden_field :order, :save_and_exit, :value => "no" %>
 	
 	<%= label_tag "main_label", "<strong>8. Alternatives and Variations:</strong>" %>
 	<div id="field_set">
 	  <%= label :answer12, :body, "#{@question12.name} <small>#{@question12.info}</small>" %>
-	  <%= text_area :answer12, :body, :class => "required" %>
+	  <%= text_area :answer12, :body %>
 	</div>
 	<%= image_tag "bt/info_tab.jpg", :alt => "More Information", :class => "more_info" %>
 	<div class="info_text">
