--- a/app/views/questionnaire/step8.html.erb
+++ b/app/views/questionnaire/step8.html.erb
@@ -6,7 +6,7 @@
   <%= error_messages_for @object.class.to_s.underscore.to_sym %>
   <% form_tag("step-8", :url => questionnaire_step8_path, :class => "validate", :method => :post, :multipart => true ) do %>
     <%= hidden_field :order, :order_id, :value => @order.id %>
-	<%= hidden_field :order, :save_and_exit, :value => "" %>
+	<%= hidden_field :order, :save_and_exit, :value => "no" %>
 	
 	<%= label_tag "main_label", "<strong>9. Drawings</strong>" %>
 	<%= label :answer13, :body, "#{@question13.name} <small>#{@question13.info}</small>" %><br/>
