--- a/app/views/questionnaire/terms.html.erb
+++ b/app/views/questionnaire/terms.html.erb
@@ -9,16 +9,16 @@
 		<td valign="top">
 			<div class="question_answers">
 				<p><strong>1.</strong><%= @question1.name %></p>
-				<div><%= simple_format @answer1.body %></div>
+				<div><%= simple_format @answer1.body rescue "" %></div>
 			</div>
 			<div class="question_answers">
 				<p><strong>2.</strong><%= @question2.name %></p>
-				<div><%= simple_format @answer2.body %></div>
+				<div><%= simple_format @answer2.body rescue "" %></div>
 			</div>
 			<div class="question_answers">
 				<p><strong>3.</strong>Inventorship</p>
 				<p><strong>A.</strong><%= @question3.name %></p>
-				<div><%= simple_format @answer3.body %></div>
+				<div><%= simple_format @answer3.body rescue "" %></div>
 				<p><strong>B.</strong><%= @question4.name %></p>
 				<div>
 					<% @inventors.each do |inventor| %>
@@ -48,35 +48,35 @@
 			<div class="question_answers">
 				<p><strong>4.</strong>Objectives and Problems Solved by your invention</p>
 				<p><strong>A.</strong><%= @question5.name %></p>
-				<div><%= simple_format @answer5.body %></div>
+				<div><%= simple_format @answer5.body rescue "" %></div>
 				<p><strong>B.</strong><%= @question6.name %></p>
-				<div><%= simple_format @answer6.body %></div>
+				<div><%= simple_format @answer6.body rescue "" %></div>
 			</div>
 			<div class="question_answers">
 				<p><strong>5.</strong>Methods and Steps</p>
 				<p><strong>A.</strong><%= @question7.name %></p>
-				<div><%= simple_format @answer7.body %></div>
+				<div><%= simple_format @answer7.body rescue "" %></div>
 				<p><strong>B.</strong><%= @question8.name %></p>
-				<div><%= simple_format @answer8.body %></div>
+				<div><%= simple_format @answer8.body rescue "" %></div>
 				<p><strong>C.</strong><%= @question9.name %></p>
-				<div><%= simple_format @answer9.body %></div>
+				<div><%= simple_format @answer9.body rescue "" %></div>
 			</div>
 		</td>
 		<td valign="top">
 			<div class="question_answers">
 				<p><strong>6.</strong>Methods or Steps</p>
 				<p><strong>A.</strong><%= @question10.name %></p>
-				<div><%= simple_format @answer10.body %></div>
+				<div><%= simple_format @answer10.body rescue "" %></div>
 			</div>
 			<div class="question_answers">
 				<p><strong>7.</strong>Use of the Invention</p>
 				<p><strong>A.</strong><%= @question11.name %></p>
-				<div><%= simple_format @answer11.body %></div>
+				<div><%= simple_format @answer11.body rescue "" %></div>
 			</div>
 			<div class="question_answers">
 				<p><strong>8.</strong>Alternatives or Variations</p>
 				<p><strong>A.</strong><%= @question12.name %></p>
-				<div><%= simple_format @answer12.body %></div>
+				<div><%= simple_format @answer12.body rescue "" %></div>
 			</div>
 			<div class="question_answers">
 				<p><strong>9.</strong>Drawings</p>
@@ -86,12 +86,12 @@
 			<div class="question_answers">
 				<p><strong>10.</strong>Patent Search</p>
 				<p><strong>A.</strong><%= @question14.name %></p>
-				<div><%= simple_format @answer14.body %></div>
+				<div><%= simple_format @answer14.body rescue "" %></div>
 			</div>
 			<div class="question_answers">
 				<h2><%= @terms.name %></h2>
 			    <p id="terms">
-			      <%= f.text_area :terms_text, :value => @terms.summary, :readonly=> "readonly" %>
+                  <%= text_area :terms_text, :terms, {:value =>@terms.summary, :readonly => "readonly"}  %>
 			    </p>
 			    <p class="checkbox_small">
 			      <%= check_box_tag(:accept, value = "yes") %>
