--- a/app/views/inventors/edit.html.erb
+++ b/app/views/inventors/edit.html.erb
@@ -27,8 +27,8 @@
 				</td>
 				<td valign="top">
 					<p class='first'>
-						<%= f.label :middle_name, '* Middel Name' %>
-						<%= f.text_field :middle_name, :class => 'required' %> 
+						<%= f.label :middle_name, '* Middle Name' %>
+						<%= f.text_field :middle_name %> 
 					</p>
 					<p class='first'>
 						<%= f.label :citizenship, '* Citizenship' %>
