--- a/app/views/questionnaire/step2.html.erb
+++ b/app/views/questionnaire/step2.html.erb
@@ -65,7 +65,7 @@
 				<td valign="top">
 					<p class='first'>
 						<%= label :inventor, :middle_name, '* Middle Name' %>
-						<%= text_field :inventor, :middle_name, :class => "#{@required}" %> 
+						<%= text_field :inventor, :middle_name %> 
 					</p>
 					<p class='first'>
 						<%= label :inventor, :citizenship, '* Citizenship' %>
