--- a/app/views/pages/trademark_application.html.erb
+++ b/app/views/pages/trademark_application.html.erb
@@ -81,7 +81,7 @@
   	</p>
   	<p class="first select_small">
   		<%= f.label(:state_of_formation, "State of Formation:") %>
-		<%= f.us_state_select :state_of_formation, {:show => :full}, {:include_blank => 'Select a State'}, {:class => 'required'} %>
+		<%= f.us_state_select :state_of_formation, {:show => :full}, {:include_blank => 'Select a State'} %>
   		<small>If Owner is a corporation or LLC, enter the state where it was formed.</small>
   	</p>
   	<p class="first">
