--- a/app/views/pages/trademark_search.html.erb
+++ b/app/views/pages/trademark_search.html.erb
@@ -68,7 +68,7 @@
   	</p>
   		<p class="first address">
     		<%= f.label(:company_name, "<strong>4.</strong> Company Name:") %>
-    		<%= f.text_field :company_name, :class => "required" %>
+    		<%= f.text_field :company_name %>
     	</p>
     	<p class="first">
     		<%= f.label(:email, "<strong>5.</strong> Email Address:") %>
