--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -13,7 +13,8 @@
   <h1><%= @page.name %></h1>
   <%= @page.body %>
 </div>
-<%= link_to image_tag("bt/get_started.png", :id => "get_started_home", :alt => "Get started on your provisional patent application", :title => "Get started on your provisional patent application", :size => "200x281"), page_path("get-started") %>
+<div id="get_started_home"></div>
+<%#= link_to image_tag("bt/get_started.png", :id => "get_started_home", :alt => "Get started on your provisional patent application", :title => "Get started on your provisional patent application", :size => "200x281"), page_path("get-started") %>
 <ul id="hot_boxes">
   <li>
     <a href="/pages/<%= @inventor_resource.permalink %>" class="title investor"></a>
@@ -49,4 +50,4 @@
   	<%= submit_tag("GO", :class => "submit") %>
   <% end %>
 </div>
-<%= javascript "pages/home" %>
+<%= javascript "plugins/flash", "pages/home" %>
