--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
   	<link href="/favicon.ico" type="image/x-icon" rel="icon"/>
   	<link href="/favicon.ico" type="image/x-icon" rel="shortcut icon"/>
 
-  	<%= javascript_include_tag :defaults, "plugins/crossbrowser", "http://www.google-analytics.com/ga", "default" %>
+  	<%= javascript_include_tag :defaults, "plugins/crossbrowser", "default" %>
   	<%= yield :head %>
   </head>
   <body>
@@ -68,5 +68,16 @@
         <p>Patent Lock&trade; is a service of the Cohen IP Law Group, P.C.</p>
       </div>
     </div>
+	<script type="text/javascript">
+	  var _gaq = _gaq || [];
+	  _gaq.push(['_setAccount', 'UA-12913192-4']);
+	  _gaq.push(['_trackPageview']);
+	  (function() {
+	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		var s = document.getElementsByTagName('script')[0]; 
+		s.parentNode.insertBefore(ga, s);
+	  })();
+	</script>
   </body>
 </html>
