--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -10,10 +10,38 @@
 <h2>Answers</h2>
 <ol>
   <% parent_object.order.answers.each do |answer| %>
-    <li>
-      <strong><%= answer.question.name %></strong>
-      <p><%= answer.body %></p>
-    </li>
+    <% if answer.question.id == 4 %>
+		<li>
+	      <strong><%= answer.question.name %></strong>
+		<% @user.order.inventors.each do |inventor| %>
+			<dl>
+				<dt>First Name:</dt>
+				<dd><%= inventor.first_name %></dd>
+				<dt>Middle Name:</dt>
+				<dd><%= inventor.middle_name %></dd>
+				<dt>Last Name:</dt>
+				<dd><%= inventor.last_name %></dd>
+				<dt>Citizenship:</dt>
+				<dd><%= inventor.citizenship %></dd>
+				<dt>Stree Address:</dt>
+				<dd><%= inventor.street_address %></dd>
+				<dt>City:</dt>
+				<dd><%= inventor.city %></dd>
+				<dt>State:</dt>
+				<dd><%= inventor.state %></dd>
+				<dt>ZIP Code:</dt>
+				<dd><%= inventor.zipcode %></dd>
+				<dt>Email Address:</dt>
+				<dd><%= inventor.email %></dd>
+			</dl>
+		<% end %>
+		</li>
+	<% else %>
+		<li>
+	      <strong><%= answer.question.name %></strong>
+	      <p><%= answer.body %></p>
+	    </li>
+	<% end %>
   <% end %>
 </ol>
 <% end %>
