--- a/app/views/mailer/provisional_patent_questionnaire.html.erb
+++ b/app/views/mailer/provisional_patent_questionnaire.html.erb
@@ -1,6 +1,6 @@
 <h1>Provisional Patent Questionnaire <%= SITE_DOMAIN %></h1>
 <p>&nbsp;</p>
-<p><% @user.name %> sent you a Provisional Patent.</p>
+<p><%= @user.name %> sent you a Provisional Patent.</p>
 <p>To confirm the payment please check your Google Checkout Account.</p>
 <h2>Order Info</h2>
 <table>
