--- a/app/views/inventors/edit.html.erb
+++ b/app/views/inventors/edit.html.erb
@@ -42,6 +42,10 @@
 						<%= f.label :zipcode, '* ZIP Code' %>
 						<%= f.text_field :zipcode, :class => 'required' %> 
 					</p>
+					<p class='first'>
+						<%= f.label :phone, '* Phone' %>
+						<%= f.text_field :phone, :class => 'required' %> 
+					</p>
 				</td>
 			</tr>
 		</table>
