--- a/app/views/questionnaire/step2.html.erb
+++ b/app/views/questionnaire/step2.html.erb
@@ -79,6 +79,10 @@
 						<%= label :inventor, :zipcode, '* ZIP Code' %>
 						<%= text_field :inventor, :zipcode, :class => "#{@required}" %> 
 					</p>
+					<p class='first'>
+						<%= label :inventor, :phone, '* Phone' %>
+						<%= text_field :inventor, :phone, :class => "#{@required}" %> 
+					</p>
 				</td>
 			</tr>
 		</table>
