--- a/app/views/questionnaire/terms.html.erb
+++ b/app/views/questionnaire/terms.html.erb
@@ -41,6 +41,8 @@
 							<dd><%= inventor.zipcode %></dd>
 							<dt>Email Address:</dt>
 							<dd><%= inventor.email %></dd>
+							<dt>Phone:</dt>
+							<dd><%= inventor.phone %></dd>
 						</dl>
 					<% end %>
 				</div>
