--- a/app/views/mailer/provisional_patent_questionnaire.html.erb
+++ b/app/views/mailer/provisional_patent_questionnaire.html.erb
@@ -50,6 +50,8 @@
 							<dd><%= inventor.zipcode %></dd>
 							<dt>Email Address:</dt>
 							<dd><%= inventor.email %></dd>
+							<dt>Phone:</dt>
+							<dd><%= inventor.phone %></dd>
 						</dl>
 					<% end %>
 				</div>
