--- a/app/views/questionnaire/step5.html.erb
+++ b/app/views/questionnaire/step5.html.erb
@@ -1,5 +1,5 @@
 <h1>Provisional Patent Questionnaire &raquo; Step 5</h1>
-<div class="content_cms">
+<div class="content_cms" id="content_text">
   <%= @page.body rescue "" %>
 </div>
 <div id="questionnaire">
