--- a/app/views/questionnaire/payment.html.erb
+++ b/app/views/questionnaire/payment.html.erb
@@ -1,5 +1,5 @@
 <h1>Provisional Patent Questionnaire &raquo; Payment</h1>
-<div class="content_cms">
+<div class="content_cms" id="content_text">
 	<% if @warning %>
 		<div id="warning"><%= @warning.away_message %></div>
 	<% end %>
