--- a/app/views/questionnaire/questions.html.erb
+++ b/app/views/questionnaire/questions.html.erb
@@ -1,5 +1,5 @@
 <h1>Provisional Patent Questionnaire &raquo; Question <%= params[:position].to_i+1 %></h1>
-<div class="content_cms">
+<div class="content_cms" id="content_text">
   <%= @page.body rescue "" %>
 </div>
 <div id="questionnaire">
