--- a/app/views/pages/get_started.html.erb
+++ b/app/views/pages/get_started.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @page.name %></h1>
-<div class="content_cms">
+<div class="content_cms" id="content_text">
 	<%= @page.body %>
 </div>
 <p style="clear:both;">&nbsp;</p>
