--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @page.name %></h1>
 <%= render :partial => 'sidebar' %>
-<div class="content_cms">
+<div class="content_cms" id="content_text">
 	<%= @page.body %>
 </div>
