--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
   	<link href="/favicon.ico" type="image/x-icon" rel="icon"/>
   	<link href="/favicon.ico" type="image/x-icon" rel="shortcut icon"/>
 
-  	<%= javascript_include_tag :defaults, "plugins/crossbrowser", "default" %>
+  	<%= javascript_include_tag :defaults, "plugins/crossbrowser" %>
   	<%= yield :head %>
   </head>
   <body>
