--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -33,6 +33,8 @@
 				<dd><%= inventor.zipcode %></dd>
 				<dt>Email Address:</dt>
 				<dd><%= inventor.email %></dd>
+				<dt>Phone Number:</dt>
+				<dd><%= inventor.phone %></dd>
 			</dl>
 		<% end %>
 		</li>
